--- a/auth-server/package.json
+++ b/auth-server/package.json
@@ -23,9 +23,14 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
-    "@nestjs/mongoose": "^11.0.3",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mongoose": "^10.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
-    "mongoose": "^8.14.3",
+    "bcrypt": "^6.0.0",
+    "mongoose": "^7.0.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
